--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "concurrently": "^5.2.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "mongoose": "^5.9.27"
+    "mongoose": "^5.9.27",
+    "react-router-dom": "^5.2.0"
   }
 }
